# CYIM

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  agent_axiom.py  agent_kora.py  agent_nova.py  agent_vex.py  env.example  pyproject.toml  read.me  requirements.txt
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  bug_report.md  feature_request.md
api/: README.md  main.py
api/models/: art_model.py
api/models/models/: music_model.py
api/routes/: art.py  music.py  status.py
api/utils/: file_utils.py
docs/: installation.md  introduction.md
scripts/: README.md  backup_data.py  clean_output.py  deploy_docker.sh  generate_sample_data.py  model_train.py  setup_env.py
tests/: README.md  conftest.py  requirements-tests.txt  test_art_generation.py  test_music_generation.py  test_utils.py
tests/integration/: test_api_art.py  test_api_music.py  test_end_to_end.py
