[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cybergenerateos"
version = "1.0.0"
description = "CyberGenerateOS: A modular, AI-powered operating system for creative professionals."
authors = [
    {name = "Your Name", email = "your-email@example.com"}
]
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.95.1",
    "uvicorn>=0.22.0",
    "pydantic>=1.10.7",
    "tensorflow>=2.11.0",
    "torch>=2.0.0",
    "transformers>=4.28.0",
    "pytest>=7.3.0",
    "black>=23.1.0",
    "flake8>=6.0.0",
    "mypy>=0.991",
    "python-dotenv>=1.0.0"
]
dynamic = ["classifiers", "urls"]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
    "pre-commit"
]

[project.urls]
homepage = "https://github.com/yourusername/cybergenerateos"
repository = "https://github.com/yourusername/cybergenerateos"
documentation = "https://cybergenerateos.readthedocs.io/"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.flake8]
max-line-length = 88
exclude = ["venv", "__pycache__", "node_modules"]
ignore = ["E203", "W503"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "--strict-markers --tb=short"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = true

[tool.isort]
profile = "black"
line_length = 88
